--- a/config/Config-images.in
+++ b/config/Config-images.in
@@ -218,7 +218,7 @@ menu "Target Images"
 	config GRUB_CONSOLE
 		bool "Use Console Terminal (in addition to Serial)"
 		depends on GRUB_IMAGES || GRUB_EFI_IMAGES
-		default y
+		default n
 
 	config GRUB_BAUDRATE
 		int "Serial port baud rate"
